[gd_scene load_steps=19 format=3 uid="uid://dxf3fephnwt5s"]

[ext_resource type="Script" path="res://Enemies/Frog.gd" id="1_is6g1"]
[ext_resource type="Texture2D" uid="uid://jwpitvclhe5t" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-1.png" id="2_f36hj"]
[ext_resource type="Texture2D" uid="uid://dx6887q4ug263" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-2.png" id="3_u25xn"]
[ext_resource type="Texture2D" uid="uid://c0mf6jeo6ytf4" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-3.png" id="4_r23a4"]
[ext_resource type="Texture2D" uid="uid://dxgf7si3yhbaj" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-4.png" id="5_4j4ip"]
[ext_resource type="Texture2D" uid="uid://d1u0ndkdebc3i" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-5.png" id="6_ska0q"]
[ext_resource type="Texture2D" uid="uid://vxl84weneb3a" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/enemy-death/enemy-death-6.png" id="7_1qkn3"]
[ext_resource type="Texture2D" uid="uid://dgnw8kkn7hl16" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/frog/idle/frog-idle-1.png" id="8_mlbjy"]
[ext_resource type="Texture2D" uid="uid://od2j2eox0of5" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/frog/idle/frog-idle-2.png" id="9_ursuc"]
[ext_resource type="Texture2D" uid="uid://cosg45t8l84qj" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/frog/idle/frog-idle-3.png" id="10_piwws"]
[ext_resource type="Texture2D" uid="uid://c644g31jowdem" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/frog/idle/frog-idle-4.png" id="11_amw0a"]
[ext_resource type="Texture2D" uid="uid://viott58roqhi" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/frog/jump/frog-jump-1.png" id="12_a3uhq"]
[ext_resource type="Texture2D" uid="uid://djhcdqll1f44s" path="res://Sunny-land-files/Sunny-land-assets-files/PNG/sprites/frog/jump/frog-jump-2.png" id="13_x748l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cfwlh"]
size = Vector2(21, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_lti0b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f36hj")
}, {
"duration": 1.0,
"texture": ExtResource("3_u25xn")
}, {
"duration": 1.0,
"texture": ExtResource("4_r23a4")
}, {
"duration": 1.0,
"texture": ExtResource("5_4j4ip")
}, {
"duration": 1.0,
"texture": ExtResource("6_ska0q")
}, {
"duration": 1.0,
"texture": ExtResource("7_1qkn3")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_x748l")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_mlbjy")
}, {
"duration": 1.0,
"texture": ExtResource("9_ursuc")
}, {
"duration": 1.0,
"texture": ExtResource("10_piwws")
}, {
"duration": 1.0,
"texture": ExtResource("11_amw0a")
}, {
"duration": 1.0,
"texture": ExtResource("8_mlbjy")
}, {
"duration": 1.0,
"texture": ExtResource("8_mlbjy")
}, {
"duration": 1.0,
"texture": ExtResource("8_mlbjy")
}, {
"duration": 1.0,
"texture": ExtResource("8_mlbjy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_a3uhq")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ic7pd"]
radius = 164.438

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u14r6"]
size = Vector2(21, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u2clk"]
size = Vector2(27, 16)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_is6g1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_cfwlh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lti0b")
animation = &"idle"

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
visible = false
shape = SubResource("CircleShape2D_ic7pd")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -2)
shape = SubResource("RectangleShape2D_u14r6")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_u2clk")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
